<resources>
    <string name="app_name">Survey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_create_form">CreateFormActivity</string>

    <string name="create_survey">Create survey</string>
    <string name="add_survey">Add survey</string>
    <string name="my_surveys">My surveys</string>

    <!-- Navigation Drawer Menu -->
    <string name="surveys">Surveys</string>
    <string name="forms">Forms</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="help">Help and feedback</string>

    <string name="other">Other</string>

    <!-- App Bar Menu -->
    <string name="search_hint">Search</string>

    <!-- Main Activity -->
    <string name="blank_feed">Feed would go here</string>
    <string name="blank_notifications">Notifications would go here</string>

    <!-- Create Form Activity -->
    <string name="create_form_title">Create Form</string>
    <string name="save_form">SAVE</string>

    <string name="form_title">Title</string>
    <string name="form_description">Description</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="checkboxes">Checkboxes</string>
    <string name="dropdown">Dropdown</string>

    <string name="form_question">Question</string>
    <string name="form_option">Add Option</string>
    <string name="option_hint">Option</string>
    <string name="alert_add_question_dialog">Add Question</string>

    <string name="add_question"><b>+ ADD QUESTION</b></string>

    <!-- Forms Activity -->
    <string name="title_activity_forms">FormsActivity</string>
    <string name="forms_title">Forms</string>
    <string name="addition_date">Added: </string>
    <!-- Form Activity -->
    <string name="form_header">Form</string>
    <!-- Other -->
    <string name="image">Just an x</string>
    <string name="form_dialog">Are you sure you want to delete?</string>
    <string name="open">Open</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_open_form">OpenFormActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
