<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_surveys"
            android:icon="@drawable/ic_menu_surveys_black_24dp"
            android:title="@string/surveys" />
        <item
            android:id="@+id/nav_forms"
            android:icon="@drawable/ic_menu_forms_black_24dp"
            android:title="@string/forms" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_poll_results_black_24dp"
            android:title="@string/results" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help_black_24dp"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
