<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/question_card"
    android:layout_margin="0dp"
    app:cardElevation="12dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:id="@+id/card_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:columnCount="2">

        <EditText
            android:id="@+id/card_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/form_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/card_multiple_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:text="@string/multiple_choice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_question"
            app:layout_constraintVertical_bias="0.009" />


        <Button
            android:id="@+id/add_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:minHeight="0dp"
            android:background="@xml/small_button"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/form_option"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="32dp" />

        <ImageButton
            android:id="@+id/delete_question_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

    </LinearLayout>


</android.support.v7.widget.CardView>